src/styles/navbar.css
nav { 
    position: fixed;
    height: 60px;
    padding: 0 50px;
    display: flex;
    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
    z-index: 1000;
    top: 0;
    left: 0;
    right: 0; 
    background-color: var(--color-bg);
}

.nav-links-container {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
}

.nav-links {
    display: flex;
    justify-content: center;
    align-items: center;
    list-style: none;
    margin: 0 auto;
    gap: 50px;
    font-weight: 500;
    flex: 1;
}

.nav-links-item a{
    transition: 0.3s all;
}

.nav-links-item a:hover {
    color: var(--color-primary);
}

.logo a{
    display: flex;
    align-items: center;
    justify-content: center;
}

.logo img {
    height: auto;
    width: auto;
    max-height: 25px;
    max-width: 200px;
}

#contact-btn {
  font-family: 'Inter', sans-serif;
  padding: 8px 16px;                     
  background-color: var(--color-bg);
  color: var(--color-primary);         
  cursor: pointer;
  border-radius: 20px;
  font-size: var(--fs-base);                  
  font-weight: 500;
  border: 2px solid black;
  transition: all 0.3s ease;    
  text-decoration: none;      
}

#contact-btn:hover {
  background-color: var(--color-primary);
  color: var(--color-bg);
  border-color: var(--color-primary);     
}

.overlay {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 999;
  display: none;
}

.hamburger {
    display: none;
}

@media screen and (max-width: 1024px) {
  
    #contact-btn {
        display: none;
    }

    .hamburger {
        display: block;
        z-index: 1001;
    }

    .nav-links {
        position: fixed;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        background: var(--color-bg);
        flex-direction: column;
        justify-content: center;
        align-items: center;
        gap: 30px;
        transform: translateX(-100%);
        transition: transform 0.3s ease-in-out;
        margin: 0;
        padding: 0;
    }

    .nav-links-container {
        display: flex;
        justify-content: space-between;
    }

    .nav-links.active {
        transform: translateX(0);
    }

    .hamburger {
        position: relative;
        width: 10px;
        height: 18px;
        cursor: pointer;
    }

    .hamburger__line {
        position: absolute;
        width: 25px;
        height: 3px;
        background-color: black;
        top: 0;
        transition: 0.25s all ease-in-out;
    }

    .hamburger__line:nth-child(3),
    .hamburger__line:nth-child(4) {
        top: 50%;
        transform: translateY(-50%);
    }

    .hamburger__line:last-child {
        top: auto;
        bottom: 0;
        transition: 0.25s all ease-in-out;
    }

    .switcher:checked ~ .hamburger__line:nth-child(2) {
        top: 50%;
        transform: translateY(-50%);
        opacity: 0;
    }

    .switcher:checked ~ .hamburger__line:last-child {
        bottom: 50%;
        transform: translateY(-50%);
        opacity: 0;
    }

    .switcher:checked ~ .hamburger__line:nth-child(3) {
        top: 50%;
        transform: translateY(-50%) rotate(45deg);
        transition-delay: 0.2s;
    }

    .switcher:checked ~ .hamburger__line:nth-child(4) {
        top: 50%;
        transform: translateY(-50%) rotate(-45deg);
        transition-delay: 0.2s;
    }

    .switcher {
        display: none;
    }
}

